# cpp_length_prefixed_protobuf

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  build.sh  main.cpp
src/protobuf/: CMakeLists.txt  message.pb.h
src/protobuf_parser/: DelimitedMessagesStreamParser.cpp  DelimitedMessagesStreamParser.hpp  helpers.cpp  helpers.hpp
test/: CMakeLists.txt  Test_DelimitedMessagesStreamParser.cpp  Test_Helpers.cpp
